app_yaml/userlist_yaml/k8s/12.userlist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: userlist-svc
spec:
  selector:
    app: userlist
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8181
  #type: ClusterIP        ## default
  #type: NodePort
  type: LoadBalancer
  #loadBalancerIP: ""
