app_yaml/userlist_yaml/k8s/14.userlist-ingress.yaml
apiVersion: extensions/v1beta1
#apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: userlist-ingress
spec:
  rules:
  - host: userlist.universal-team-245015.gcp.com
    http:
      paths:
      #- path: /users/1
      #  backend:
      #    serviceName: userlist2-svc
      #    servicePort: 80
      - path: /
        backend:
          serviceName: userlist1-svc
          servicePort: 80
